[package]
name = "iglo"
version = "0.1.0"
edition = "2021"

[dependencies]
ash = "0.35"
bitflags = "1.3.2"
enum_dispatch = "0.3.7"

[target.'cfg(windows)'.dependencies]
windows = {version = "0.29.0", features = [
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_LibraryLoader",
    "Win32_UI_WindowsAndMessaging",
]}
